# ods.ai-mlops2.0

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  Snakefile  environment-apple-m1.yml  requirements-dev.txt  requirements.txt  runall.sh  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: BirdsBoxes.ipynb
src/data/: make_dataset.py  preprocessing.py
src/models/: build_model.py  evaluate.py  train_model.py
src/visualization/: __init__.py  visualize.py
