[metadata]
name = dk-ods.ai-mlops2.0
description = Birds object detection project for the course MLOps2.0 from ods.ai
author = Dmitry Kabanov
license = MIT
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
install_requires =
    numpy
    click
    opencv-python
    tensorflow>=2.10
    tensorflow_datasets
    matplotlib
    python-dotenv>=0.5.1
    dvc[s3]>=2.10
python_requires = >=3.9, <3.11
# package_dir = =src
zip_safe = False

[options.extras_require]
dev =
    flake8>=5
    isort>=5.10
    mypy>=0.91
    black>=22.1

[flake8]
max-line-length = 88
exclude =
    docs
    venv

[isort]
profile = black
